- [MINOR] [DOC] [BUGFIX] 1. survey_dml a. experiments results corrected

--- a/doc/survey_dml/source/仿真对比/主页.rst
+++ b/doc/survey_dml/source/仿真对比/主页.rst
@@ -117,7 +117,7 @@
         DATA_DLT_ANG_TST = 1;               % data   of test angles' delta  in degree
         DATA_RNG_ANG_TST = 89;              % data   of test angles' range  in degree
 
-*   首先，保持物体的相位随机，得到的均方误差是：5.42，5.44
+*   首先，保持物体的相位随机，得到的均方误差约等于5.5（，DBF算法在同等情况下的均方误差约等于900）
 
     ::
 
@@ -127,31 +127,31 @@
 
     \
 
-*   强制令物体的相位差为0，得到的均方误差是：3.37，3.37
+*   强制令物体的相位差为0.0 pi，得到的均方误差约等于3.4（，DBF算法在同等情况下的均方误差约等于30）
 
     ::
 
-        datPha = exp(-1i * 2 * pi * 0);
+        datPha = exp(-1i * 2 * pi * 0.00 * idxObj);
 
     .. image:: 信号相位_DML_有噪情况_统计结果_±13度_0.0pi相位.png
 
     \
 
-*   强制令物体的相位差为pi/2，得到的均方误差是：2.04，2.08
+*   强制令物体的相位差为0.5 pi，得到的均方误差约等于5.5（，DBF算法在同等情况下的均方误差约等于1400）
 
     ::
 
-        datPha = exp(-1i * 2 * pi * 0.25);
+        datPha = exp(-1i * 2 * pi * 0.25 * idxObj);
 
     .. image:: 信号相位_DML_有噪情况_统计结果_±13度_0.5pi相位.png
 
     \
 
-*   强制令物体的相位差为pi，得到的均方误差是：2.00，1.83
+*   强制令物体的相位差为1.0 pi，得到的均方误差约等于2.3（，DBF算法在同等情况下的均方误差约等于2100）
 
     ::
 
-        datPha = exp(-1i * 2 * pi * 0.5);
+        datPha = exp(-1i * 2 * pi * 0.50 * idxObj);
 
     .. image:: 信号相位_DML_有噪情况_统计结果_±13度_1.0pi相位.png
 
