- [MINOR] [DOC] [UPDATE] 1. survey_dml a. several typos corrected b. several statements clarified

--- a/doc/survey_dml/source/仿真对比/主页.rst
+++ b/doc/survey_dml/source/仿真对比/主页.rst
@@ -11,12 +11,12 @@
 仿真对比
 =========
 
----------
-信号相位
----------
+---------------
+物体的相对相位
+---------------
 
     **如果物体的角度相差得并不远（相较于-3 dB点而言），即使在无噪情况下，
-    DBF算法的结果也会受到物体相位的影响，从而导致波峰或者向外扩散，或者向内聚拢甚至合并成一个，
+    DBF算法的结果也会受到物体相对相位（指《建模方法-信号构建》中的datPha，下同）的影响，从而导致波峰或者向外扩散，或者向内聚拢甚至合并成一个，
     这是DBF算法在判断多物体时最为显著的问题。**
 
     \
@@ -41,7 +41,7 @@
 
     可以得到如下的曲线，其中，主瓣的-3 dB点的位置在±13度：
 
-    .. image:: 信号相位_DBF_单次结果_单物体.png
+    .. image:: 物体相对相位_DBF_单次结果_单物体.png
 
     \
 
@@ -53,30 +53,30 @@
 
     根据物体的不同相位，可能得到如下的曲线，向内聚拢，甚至合并成一个波峰：
 
-    .. image:: 信号相位_DBF_单次结果_双物体_聚拢.png
-    .. image:: 信号相位_DBF_单次结果_双物体_合并.png
+    .. image:: 物体相对相位_DBF_单次结果_双物体_聚拢.png
+    .. image:: 物体相对相位_DBF_单次结果_双物体_合并.png
 
     \
 
     也可能向外扩散：
 
-    .. image:: 信号相位_DBF_单次结果_双物体_扩散.png
+    .. image:: 物体相对相位_DBF_单次结果_双物体_扩散.png
 
     \
 
     而在统计上，有如下的分布：
 
-    .. image:: 信号相位_DBF_统计结果_±13度.png
+    .. image:: 物体相对相位_DBF_统计结果_±13度.png
 
     \
 
 *   这一现象直到±21度，才能得到缓解：
 
-    .. image:: 信号相位_DBF_统计结果_±21度.png
+    .. image:: 物体相对相位_DBF_统计结果_±21度.png
 
     \
 
-    **在无噪情况下，DML算法不受物体相位的影响。**
+    **在无噪情况下，DML算法（的峰值）不受物体相对相位的影响。**
 
     \
 
@@ -86,7 +86,7 @@
 
         DATA_ANG_OBJ = [-13, 13];    % data   of objects' angles     in degree
 
-    .. image:: 信号相位_DML_无噪情况_统计结果_±13度.png
+    .. image:: 物体相对相位_DML_无噪情况_统计结果_±13度.png
 
     \
 
@@ -96,11 +96,11 @@
 
         DATA_ANG_OBJ = [-1, 1];    % data   of objects' angles     in degree
 
-    .. image:: 信号相位_DML_无噪情况_统计结果_±1度.png
+    .. image:: 物体相对相位_DML_无噪情况_统计结果_±1度.png
 
     \
 
-    **在有噪情况下，DML算法会受到物体相位的影响，但程度并不高。**
+    **在有噪情况下，DML算法的峰值会受到物体相对相位的影响，但程度比DBF算法低得多。**
 
     \
 
@@ -123,7 +123,7 @@
 
         datPha = exp(-1i * 2 * pi * rand);
 
-    .. image:: 信号相位_DML_有噪情况_统计结果_±13度_随机相位.png
+    .. image:: 物体相对相位_DML_有噪情况_统计结果_±13度_随机相位.png
 
     \
 
@@ -133,7 +133,7 @@
 
         datPha = exp(-1i * 2 * pi * 0.00 * idxObj);
 
-    .. image:: 信号相位_DML_有噪情况_统计结果_±13度_0.0pi相位.png
+    .. image:: 物体相对相位_DML_有噪情况_统计结果_±13度_0.0pi相位.png
 
     \
 
@@ -143,7 +143,7 @@
 
         datPha = exp(-1i * 2 * pi * 0.25 * idxObj);
 
-    .. image:: 信号相位_DML_有噪情况_统计结果_±13度_0.5pi相位.png
+    .. image:: 物体相对相位_DML_有噪情况_统计结果_±13度_0.5pi相位.png
 
     \
 
@@ -153,14 +153,33 @@
 
         datPha = exp(-1i * 2 * pi * 0.50 * idxObj);
 
-    .. image:: 信号相位_DML_有噪情况_统计结果_±13度_1.0pi相位.png
+    .. image:: 物体相对相位_DML_有噪情况_统计结果_±13度_1.0pi相位.png
+
+    \
+
+*   在有噪情况下，DML算法的峰值受相位影响的原因是：尽管在无噪情况下，
+    DML算法的峰值不受影响，但其坡度会随之改变，如下图所示
+
+    ::
+
+        datPha = exp(-1i * 2 * pi * 0.00 * idxObj);
+
+    .. image:: 物体相对相位_DML_无噪情况_坡度和相位_0.00pi相位.png
+
+    \
+
+    ::
+
+        datPha = exp(-1i * 2 * pi * 0.80 * idxObj);
+
+    .. image:: 物体相对相位_DML_无噪情况_坡度和相位_0.80pi相位.png
 
 
---------------------
-物体能量 × 物体数量
---------------------
+---------------------------
+物体的相对能量 × 物体的数量
+---------------------------
 
-    **在无噪情况下，DML算法基本不受物体能量的影响，甚至基本不受物体数量的影响。**
+    **在无噪情况下，DML算法基本不受物体相对能量的影响，甚至基本不受物体数量的影响。**
 
     \
 
@@ -176,24 +195,24 @@
         DATA_DLT_ANG_TST = 1;               % data   of test angles' delta  in degree
         DATA_RNG_ANG_TST = 89;              % data   of test angles' range  in degree
 
-*   当物体能量相差20 dB时，结果依然正确：
+*   当物体相对能量相差20 dB时，结果依然正确：
 
     ::
 
         DATA_POW_OBJ = [0, -20];    % data   of objects' powers     in dB
 
-    .. image:: 物体能量_DML_单次结果_-20dB.png
+    .. image:: 物体相对能量_DML_单次结果_-20dB.png
 
     \
 
-*   事实上，直到物体能量相差130 dB时，低能量物体的角度才出现偏离，
+*   事实上，直到物体相对能量相差130 dB时，低能量物体的角度才出现偏离，
     因此可以推知：DML算法在无噪情况下，甚至基本不受物体数量的影响：
 
     ::
 
         DATA_POW_OBJ = [0, -130];    % data   of objects' powers     in dB
 
-    .. image:: 物体能量_DML_统计结果_-130dB.png
+    .. image:: 物体相对能量_DML_统计结果_-130dB.png
 
     \
 
@@ -222,7 +241,7 @@
 
         DATA_POW_OBJ = [0, -10];    % data   of objects' powers     in dB
 
-    .. image:: 物体能量_DML_有噪情况_统计结果_-10dB.png
+    .. image:: 物体相对能量_DML_有噪情况_统计结果_-10dB.png
 
     \
 
@@ -232,7 +251,7 @@
 
         DATA_POW_OBJ = [0, -20];    % data   of objects' powers     in dB
 
-    .. image:: 物体能量_DML_有噪情况_统计结果_-20dB.png
+    .. image:: 物体相对能量_DML_有噪情况_统计结果_-20dB.png
 
     \
 
@@ -243,7 +262,7 @@
 
         DATA_POW_OBJ = [0, -100];    % data   of objects' powers     in dB
 
-    .. image:: 物体能量_DML_有噪情况_统计结果_-100dB.png
+    .. image:: 物体相对能量_DML_有噪情况_统计结果_-100dB.png
 
     \
 
@@ -252,7 +271,7 @@
 天线间距 × 加窗系数
 --------------------
 
-    **[0, 0.5, 1.0, 1.5]天线，不加窗，信噪比20dB，物体能量一致，物体相位随机，扫描范围±89度。**
+    **[0, 0.5, 1.0, 1.5]天线，不加窗，信噪比20dB，物体相对能量一致，物体相对相位随机，扫描范围±89度。**
 
     \
 
@@ -268,7 +287,7 @@
         DATA_DLT_ANG_TST = 1;               % data   of test angles' delta  in degree
         DATA_RNG_ANG_TST = 89;              % data   of test angles' range  in degree
 
-*   对于DBF算法，如果物体出现在±21度，结果不会出现显著错误，其均方差约等于35：
+*   对于DBF算法，如果物体出现在±21度，结果不会出现显著错误，其均方误差约等于35：
 
     ::
 
@@ -278,7 +297,7 @@
 
     \
 
-*   对于DML算法，如果物体出现在±9度时，DBF算法的均方差约等于20：
+*   对于DML算法，如果物体出现在±9度时，DBF算法的均方误差约等于20：
 
     ::
 
@@ -288,7 +307,7 @@
 
     \
 
-    **[0, 0.5, 1.0, 1.5, 2.0, 2.5, 3.0, 3.5]天线，不加窗，信噪比20dB，物体能量一致，物体相位随机，扫描范围±89度。**
+    **[0, 0.5, 1.0, 1.5, 2.0, 2.5, 3.0, 3.5]天线，不加窗，信噪比20dB，物体相对能量一致，物体相对相位随机，扫描范围±89度。**
 
     \
 
@@ -304,7 +323,7 @@
         DATA_DLT_ANG_TST = 1;               % data   of test angles' delta  in degree
         DATA_RNG_ANG_TST = 89;              % data   of test angles' range  in degree
 
-*   对于DBF算法，如果物体出现在±10度，结果不会出现显著错误，其均方差约等于10：
+*   对于DBF算法，如果物体出现在±10度，结果不会出现显著错误，其均方误差约等于10：
 
     ::
 
@@ -314,7 +333,7 @@
 
     \
 
-*   对于DML算法，如果物体出现在±4度，其均方差约等于2：
+*   对于DML算法，如果物体出现在±4度，其均方误差约等于2：
 
     ::
 
@@ -324,7 +343,7 @@
 
     \
 
-    **[0, 0.5, 2.0, 3.0]天线，不加窗，信噪比20dB，物体能量一致，物体相位随机，扫描范围±29度。**
+    **[0, 0.5, 2.0, 3.0]天线，不加窗，信噪比20dB，物体相对能量一致，物体相对相位随机，扫描范围±29度。**
 
     \
 
@@ -340,7 +359,7 @@
         DATA_DLT_ANG_TST = 1;                     % data   of test angles' delta  in degree
         DATA_RNG_ANG_TST = 30;                    % data   of test angles' range  in degree
 
-*   对于DBF算法，如果物体出现在±11度，结果不会出现显著错误，其均方差约等于2：
+*   对于DBF算法，如果物体出现在±11度，结果不会出现显著错误，其均方误差约等于2：
 
     ::
 
@@ -350,7 +369,7 @@
 
     \
 
-*   对于DML算法，如果物体出现在±11度时，DBF算法的均方差约等于0.4：
+*   对于DML算法，如果物体出现在±11度时，DBF算法的均方误差约等于0.4：
 
     ::
 
@@ -369,7 +388,7 @@
 采样次数 × 平均方式
 --------------------
 
-    **显然，通过增加采样次数可以有效地提高信噪比，从而降低均方差，并获得更优的解角效果，
+    **显然，通过增加采样次数可以有效地提高信噪比，从而降低均方误差，并获得更优的解角效果，
     而平均所采用的方式似乎对结果并没有显著的影响。**
 
 *   为了分析这一结论，我们不妨基于以下的参数，对DML算法进行测试：
@@ -383,7 +402,7 @@
         DATA_DLT_ANG_TST = 1;                     % data   of test angles' delta  in degree
         DATA_RNG_ANG_TST = 30;                    % data   of test angles' range  in degree
 
-*   在单次采样的情况下，均方差约等于20：
+*   在单次采样的情况下，均方误差约等于20：
 
     ::
 
@@ -393,7 +412,7 @@
 
     \
 
-*   在多次采样（9）并基于datSum作平均的情况下，均方差约等于2：
+*   在多次采样（9）并基于datSum作平均的情况下，均方误差约等于2：
 
     ::
 
@@ -403,7 +422,7 @@
 
     \
 
-*   在多次采样（9）并基于datRTmp作平均的情况下，均方差亦约等于2：
+*   在多次采样（9）并基于datRTmp作平均的情况下，均方误差亦约等于2：
 
     ::
 
@@ -417,14 +436,14 @@
 -----
 
 #.  如果物体的角度相差得并不远（相较于-3 dB点而言），即使在无噪情况下，
-    DBF算法的结果也会受到物体相位的影响，从而导致波峰或者向外扩散，或者向内聚拢甚至合并成一个，
+    DBF算法的结果也会受到物体相对相位（指《建模方法-信号构建》中的datPha，下同）的影响，从而导致波峰或者向外扩散，或者向内聚拢甚至合并成一个，
     这是DBF算法在判断多物体时最为显著的问题。
 
-#.  在无噪情况下，DML算法不受物体相位的影响。
+#.  在无噪情况下，DML算法的峰值不受物体相对相位的影响。
 
-#.  在有噪情况下，DML算法会受到物体相位的影响，但程度并不高。
+#.  在有噪情况下，DML算法的峰值会受到物体相对相位的影响，但程度比DBF算法低得多。
 
-#.  在无噪情况下，DML算法基本不受物体能量的影响，甚至基本不受物体数量的影响。
+#.  在无噪情况下，DML算法基本不受物体相对能量的影响，甚至基本不受物体数量的影响。
 
 #.  在有噪情况下，如果只有一个物体存在，
     或者有两个物体存在，但其中一个物体的能量较低，
@@ -433,5 +452,5 @@
 
 #.  典型参数设置下DBF算法和DML算法的表现请见【 `天线间距 × 加窗系数`_ 】
 
-#.  显然，通过增加采样次数可以有效地提高信噪比，从而降低均方差，并获得更优的解角效果，
+#.  显然，通过增加采样次数可以有效地提高信噪比，从而降低均方误差，并获得更优的解角效果，
     而平均所采用的方式似乎对结果并没有显著的影响。
