--- a/doc/survey_dml/source/建模方法/主页.rst
+++ b/doc/survey_dml/source/建模方法/主页.rst
@@ -98,7 +98,7 @@
                 datSmpSum = datSmpSum + datSmpTmp;
             end
             datSmp = datSmpSum / NUMB_SMP;
-            datR = datSmp .* datSmp;
+            datR = datSmp .* datSmp';
 
         亦可按以下方式构建，即基于datRTmp产生
 
