--- a/doc/survey_dml/source/建模方法/主页.rst
+++ b/doc/survey_dml/source/建模方法/主页.rst
@@ -15,24 +15,28 @@
 参数设置
 --------
 
-    ======= ================ ====== ================== =======
-    级别    名称             类型   说明                单位
-    ======= ================ ====== ================== =======
-    原始    NUMB_RND         标量   测试轮数            \
-    原始    NUMB_SMP         标量   采样次数            \
-    原始    DATA_DIS_ANT     向量   天线间距            波长
-    原始    DATA_COE_WIN     向量   加窗比例            \
-    原始    DATA_ANG_OBJ     向量   物体角度            度
-    原始    DATA_POW_OBJ     向量   物体能量（相对）    dB
-    原始    DATA_SNR         标量   信噪比              dB
-    原始    DATA_RNG_ANG_TST 标量   测试角度范围        度
-    原始    DATA_DLT_ANG_TST 标量   测试角度步长        度
-    \-
-    次级    DATA_ANG_TST     向量   测试角度            度
-    次级    NUMB_ANT         标量   天线数量
-    次级    NUMB_OBJ         标量   物体数量
-    次级    NUMB_ANG_TST     标量   测试角度数量
-    ======= ================ ====== ================== =======
+    .. table::
+        :align: left
+        :widths: auto
+
+        ======= ================ ====== ================== =======
+        级别    名称             类型   说明                单位
+        ======= ================ ====== ================== =======
+        原始    NUMB_RND         标量   测试轮数            \
+        原始    NUMB_SMP         标量   采样次数            \
+        原始    DATA_DIS_ANT     向量   天线间距            波长
+        原始    DATA_COE_WIN     向量   加窗比例            \
+        原始    DATA_ANG_OBJ     向量   物体角度            度
+        原始    DATA_POW_OBJ     向量   物体能量（相对）    dB
+        原始    DATA_SNR         标量   信噪比              dB
+        原始    DATA_RNG_ANG_TST 标量   测试角度范围        度
+        原始    DATA_DLT_ANG_TST 标量   测试角度步长        度
+        \-
+        次级    DATA_ANG_TST     向量   测试角度            度
+        次级    NUMB_ANT         标量   天线数量
+        次级    NUMB_OBJ         标量   物体数量
+        次级    NUMB_ANG_TST     标量   测试角度数量
+        ======= ================ ====== ================== =======
 
 
 --------
